started to work on the notes wrapping bug

--- a/style.css
+++ b/style.css
@@ -64,7 +64,10 @@ button {
     position: absolute;
     background-color: lightsalmon;
     z-index: 4;
-    min-height: 100dvh;
+    max-height: 100dvh;
+    position: fixed;
+    overflow-y: scroll;
+    padding-bottom: 2rem;
   }
   .folders-navbar.active {
     translate: 0;
@@ -217,6 +220,7 @@ button {
     10%;
   height: 250px;
   cursor: pointer;
+  text-wrap: wrap; /* fix it  */
 }
 
 .note-btn {
